# rust-bitcoin-coin-selection

./: Cargo.toml  README.md  rustfmt.toml
benches/: coin_selection.rs  coin_selection_benchmark.rs
bitcoin-coin-selection/: Cargo.toml
bitcoin-coin-selection/benches/: coin_selection.rs
bitcoin-coin-selection/src/: branch_and_bound.rs  lib.rs  single_random_draw.rs
examples/: select_coins.rs
fuzz/: Cargo.toml
fuzz-coin-selection/: Cargo.toml
fuzz-coin-selection/fuzz_targets/: branch_and_bound_selection.rs  single_random_draw_selection.rs
fuzz-coin-selection/src/: main.rs
fuzz/fuzz_targets/: select_coins.rs  select_coins_bnb.rs  select_coins_srd.rs
src/: branch_and_bound.rs  coin_grinder.rs  errors.rs  lib.rs  single_random_draw.rs  weighted_utxo.rs
