[package]
authors = ["Yancy Ribbens, Crypto Garage"]
edition = "2018"
name = "rust-bitcoin-coin-selection"
version = "0.1.0"

[dependencies]
rand = {version = "0.6", default-features = false, optional = true}

[dev-dependencies]
rand = "0.6"
criterion = "0.3"

[[bench]]
name = "coin_selection_benchmark"
harness = false
