[package]
authors = [
  "Yancy Ribbens <email@yancy.lol>",
]
edition = "2018"
license = "CC0-1.0"
name = "bitcoin-coin-selection"
repository = "https://github.com/p2pderivatives/rust-bitcoin-coin-selection"
version = "0.7.0"
# documentation = "https://docs.rs/bitcoin-coin-selection/"
description = "Libary providing utility functions to efficiently select a set of UTXOs."
keywords = ["bitcoin", "coin-selection", "coin", "coinselection", "utxo"]
readme = "README.md"
rust-version = "1.63.0"

[dependencies]
bitcoin = { git = "https://github.com/yancyribbens/rust-bitcoin.git", rev = "dbd57da8fc9b8a44f38e6f02b77b858d7695f627" }
bitcoin-units = { git = "https://github.com/yancyribbens/rust-bitcoin.git", rev = "dbd57da8fc9b8a44f38e6f02b77b858d7695f627" }
rand = { version = "0.8.5", default-features = false, optional = true }

[dev-dependencies]
bitcoin = { git = "https://github.com/yancyribbens/rust-bitcoin.git", rev = "dbd57da8fc9b8a44f38e6f02b77b858d7695f627", features = ["arbitrary"] }
criterion = "0.3"
bitcoin-coin-selection = {path = ".", features = ["rand"]}
rand = "0.8.5"
arbitrary = { version = "1", features = ["derive"] }
arbtest = "0.3.1"
exhaustigen = "0.1.0"

[[bench]]
name = "coin_selection"
harness = false

[patch.crates-io]
bitcoin_hashes = { git = "https://github.com/yancyribbens/rust-bitcoin.git", rev = "dbd57da8fc9b8a44f38e6f02b77b858d7695f627" }
base58ck = { git = "https://github.com/yancyribbens/rust-bitcoin.git", rev = "dbd57da8fc9b8a44f38e6f02b77b858d7695f627" }
bitcoin-internals = { git = "https://github.com/yancyribbens/rust-bitcoin.git", rev = "dbd57da8fc9b8a44f38e6f02b77b858d7695f627" }
bitcoin-io = { git = "https://github.com/yancyribbens/rust-bitcoin.git", rev = "dbd57da8fc9b8a44f38e6f02b77b858d7695f627" }
bitcoin-primitives = { git = "https://github.com/yancyribbens/rust-bitcoin.git", rev = "dbd57da8fc9b8a44f38e6f02b77b858d7695f627" }
bitcoin-addresses = { git = "https://github.com/yancyribbens/rust-bitcoin.git", rev = "dbd57da8fc9b8a44f38e6f02b77b858d7695f627" }
bitcoin-units = { git = "https://github.com/yancyribbens/rust-bitcoin.git", rev = "dbd57da8fc9b8a44f38e6f02b77b858d7695f627" }
