[package]
name = "bitcoin-coin-selection-fuzz"
version = "0.0.0"
publish = false
edition = "2018"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
rand = "0.8.5"
bitcoin = { git = "https://github.com/yancyribbens/rust-bitcoin.git", rev = "dbd57da8fc9b8a44f38e6f02b77b858d7695f627", features = ["arbitrary"] }
arbitrary = { version = "1", features = ["derive"] }

[dependencies.bitcoin-coin-selection]
path = ".."
features = ["rand"]

[[bin]]
name = "select_coins_srd"
path = "fuzz_targets/select_coins_srd.rs"
test = false
doc = false
bench = false

[[bin]]
name = "select_coins_bnb"
path = "fuzz_targets/select_coins_bnb.rs"
test = false
doc = false
bench = false

[[bin]]
name = "select_coins"
path = "fuzz_targets/select_coins.rs"
test = false
doc = false
bench = false

[patch.crates-io]
bitcoin_hashes = { git = "https://github.com/yancyribbens/rust-bitcoin.git", rev = "dbd57da8fc9b8a44f38e6f02b77b858d7695f627" }
base58ck = { git = "https://github.com/yancyribbens/rust-bitcoin.git", rev = "dbd57da8fc9b8a44f38e6f02b77b858d7695f627" }
bitcoin-internals = { git = "https://github.com/yancyribbens/rust-bitcoin.git", rev = "dbd57da8fc9b8a44f38e6f02b77b858d7695f627" }
bitcoin-io = { git = "https://github.com/yancyribbens/rust-bitcoin.git", rev = "dbd57da8fc9b8a44f38e6f02b77b858d7695f627" }
bitcoin-primitives = { git = "https://github.com/yancyribbens/rust-bitcoin.git", rev = "dbd57da8fc9b8a44f38e6f02b77b858d7695f627" }
bitcoin-addresses = { git = "https://github.com/yancyribbens/rust-bitcoin.git", rev = "dbd57da8fc9b8a44f38e6f02b77b858d7695f627" }
bitcoin-units = { git = "https://github.com/yancyribbens/rust-bitcoin.git", rev = "dbd57da8fc9b8a44f38e6f02b77b858d7695f627" }
